--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,5 @@
+/*Visão Geral*/
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -49,7 +51,7 @@ a:hover {
   padding: 10px 20px;
 }
 
-/*Apresentação do site*/
+
 .title {
   font-family: 'Lobster', cursive;
   font-size: 3em;
@@ -68,8 +70,18 @@ a:hover {
   line-height: 1.8em;
 }
 
-.portfolio h2,
-.contato h2{
+#sobre,
+#portfolio,
+#contato,
+#cc {
+  padding: 2em;
+  min-height: 100vh;
+}
+
+#sobre h2,
+#portfolio h2,
+#contato h2,
+#cc h2{
   font-family: 'Playfair Display', serif;
   color: whitesmoke;
   margin-bottom: 1em;
@@ -77,31 +89,47 @@ a:hover {
   line-height: 2em;
 }
 
-.portfolio,
-.contato {
-  padding: 2em;
-  min-height: 100vh;
+@media (min-width: 1200px) {
+  #sobre,
+  #portfolio,
+  #contato  {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+ }
 }
 
-#cc h2,
-.site-subtitle {
-  color: #f5f5f5;
-  font-family: 'Playfair Display', serif;
-  font-size: 1.6em;
-  margin: 10px 15px;
-}
+
 
 /* Sobre */
 
-.minha-foto{
-  width: 120px;
+#sobre p {
+  color: white;
+  text-indent: 3%;
+  margin-top: 1.1em;
+  text-align: justify;
 }
+
+#sobre  .avatar img{
+  margin-left: 2em;
+  border-radius: 50%;
+  float: right;
+}
+
+/* Tecnologias */
 
 #cc .imagem{
   display: grid;
   gap: 1em;
   justify-content: center;
-  grid-template-columns: repeat(3, 140px);
+  grid-template-columns: repeat(2, 140px);
+}
+
+
+@media (min-width: 540px) {
+  .portofolio .grid {
+    grid-template-columns: repeat(3, 140px);
+  }
 }
 
 @media (min-width: 880px) {
@@ -113,10 +141,6 @@ a:hover {
     height: 220px;
     width: 220px;
   }
-}
-
-#cc .figure {
-  text-align: center;
 }
 
 .img-portfolio {
@@ -135,19 +159,23 @@ a:hover {
 
 /* Contato */
 
-.contato a {
-  font-size: 4.5em;
-  color: rgb(196, 2, 196);
+#sobre a,
+#contato a {
+  color: rgb(207, 106, 23);
   transition: text-shadow 1s;
 }
 
-.contato a:active, 
-.contato a:hover {
+#contato a {
+  font-size: 5.5em;
+}
+
+#contato a:active, 
+#contato a:hover {
   text-decoration: none;
-  color: rgb(207, 106, 23);
+  color: rgb(196, 2, 196);
   text-shadow: 0px 0px 10px rgb(54, 4, 87);
 }
 
-.contato .icons {
+#contato .icons {
   text-align: center;
 }
