--- a/css/estilo.css
+++ b/css/estilo.css
@@ -80,6 +80,12 @@ a:hover {
   line-height: 1.8em;
 }
 
+.newBack{
+  background-color: whitesmoke;
+  position: fixed;
+  width: fit-content !important;
+}
+
 #sobre,
 #portfolio,
 #contato,
@@ -87,6 +93,7 @@ a:hover {
   padding: 2em;
   min-height: 100vh;
 }
+
 
 #sobre h2,
 #portfolio h2,
