--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: linear-gradient(to right, rgb(212, 54, 54), rgb(54, 4, 87));
+  background-image: linear-gradient(to right, #baebff, #c55df6);
   background-size: auto 100vh;
   font-family: 'Arimo', sans-serif;
   font-size: 19px;
@@ -23,17 +23,17 @@ header {
 
 
 a {
-  color: rgb(129, 9, 129);
+  color: #363F4D;
   text-decoration: none;
 }
 
 a:hover {
-  color: rgb(207, 106, 23);
+  color: #363F4D;
   text-decoration: underline;
 }
 
 .menu {
-  background-color: whitesmoke;
+  background-color: #D19BCB;
   position: fixed;
   top: 0;
   width: 100vw;
@@ -71,7 +71,7 @@ a:hover {
 .title,
 .subtitle{
   text-align: center;
-  color: whitesmoke;
+  color: #432115;
 }
       
 .subtitle {
@@ -81,7 +81,7 @@ a:hover {
 }
 
 .newBack{
-  background-color: whitesmoke;
+  background-color: #D19BCB;
   position: fixed;
   width: fit-content !important;
 }
@@ -99,8 +99,8 @@ a:hover {
 #portfolio h2,
 #contato h2,
 #cc h2{
-  font-family: 'Playfair Display', serif;
-  color: whitesmoke;
+  font-family: 'Lobster', cursive;
+  color: #7D5B25;
   margin-bottom: 1em;
   font-size: 2em;
   line-height: 2em;
@@ -121,7 +121,7 @@ a:hover {
 /* Sobre */
 
 #sobre p {
-  color: white;
+  color: #432115;
   text-indent: 3%;
   margin-top: 1.1em;
   text-align: justify;
@@ -189,7 +189,7 @@ a:hover {
 
 #sobre a,
 #contato a {
-  color: rgb(207, 106, 23);
+  color: #8C4584;
   transition: text-shadow 1s;
 }
 
