--- a/css/estilo.css
+++ b/css/estilo.css
@@ -94,7 +94,6 @@ a:hover {
   min-height: 100vh;
 }
 
-
 #sobre h2,
 #portfolio h2,
 #contato h2,
@@ -103,19 +102,19 @@ a:hover {
   color: #7D5B25;
   margin-bottom: 1em;
   font-size: 2em;
-  line-height: 2em;
+  line-height: 3em;
 }
 
 @media (min-width: 1200px) {
   #sobre,
   #portfolio,
-  #contato  {
+  #contato,
+  #cc  {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
  }
 }
-
 
 
 /* Sobre */
@@ -125,6 +124,10 @@ a:hover {
   text-indent: 3%;
   margin-top: 1.1em;
   text-align: justify;
+}
+
+#sobre a {
+  color: #78026E;
 }
 
 #sobre  .avatar img{
@@ -187,10 +190,9 @@ a:hover {
 
 /* Contato */
 
-#sobre a,
 #contato a {
   color: #8C4584;
-  transition: text-shadow 1s;
+  transition: text-shadow 80ms;
 }
 
 #contato a {
@@ -200,10 +202,12 @@ a:hover {
 #contato a:active, 
 #contato a:hover {
   text-decoration: none;
-  color: rgb(196, 2, 196);
-  text-shadow: 0px 0px 10px rgb(54, 4, 87);
+  text-shadow: 0px 0px 5px #ffffff;
 }
 
 #contato .icons {
+  display: grid;
+  justify-content: center;
   text-align: center;
+  grid-template-columns: repeat(3, 170px);
 }
