--- a/css/estilo.css
+++ b/css/estilo.css
@@ -89,7 +89,7 @@ a:hover {
 #sobre,
 #portfolio,
 #contato,
-#cc {
+#tecs {
   padding: 2em;
   min-height: 100vh;
 }
@@ -97,10 +97,9 @@ a:hover {
 #sobre h2,
 #portfolio h2,
 #contato h2,
-#cc h2{
+#tecs h2{
   font-family: 'Lobster', cursive;
   color: #7D5B25;
-  margin-bottom: 1em;
   font-size: 2em;
   line-height: 3em;
 }
@@ -109,7 +108,7 @@ a:hover {
   #sobre,
   #portfolio,
   #contato,
-  #cc  {
+  #tecs  {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
@@ -146,7 +145,7 @@ a:hover {
 
 /* Tecnologias */
 
-#cc .imagem{
+#tecs .imagem{
   display: grid;
   gap: 1em;
   justify-content: center;
@@ -155,13 +154,13 @@ a:hover {
 
 
 @media (min-width: 560px) {
-  #cc .imagem{
+  #tecs .imagem{
     grid-template-columns: repeat(2, 240px);
   }
 }
 
 @media (min-width: 880px) {
-  #cc .imagem {
+  #tecs .imagem {
     grid-template-columns: 260px 260px 260px;
     align-content: center;
     justify-content: center;
